test/Fail/Issue7823a.err
Issue7823a.agda:12.5-9: error: [UnequalTypes]
The type
  Nat
is not a subtype of
  P suc
when checking that the expression zero has type P suc
